			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2785 2005/07/22 08:52:53 jinmei Exp $

<200507>
2005-07-22  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: fixed memory leak for renew/rebind event data.
	(KAME PR 872 reported by Meng Huan Hsieh)

2005-07-22  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6_src.c: allowed an application to send a
	packet to a scoped address without explicitly disambiguating the
	scope zone but with specifying the outgoing interface.  It's a bad
	practice and should be discouraged, but such code has been spread,
	unfortunately.

2005-07-16  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_output.c (ip6_output): do not send
	ctlinput notification unconditionally when an outgoing packet is
	larger than the link MTU.  From FreeBSD.

2005-07-15  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/ah_aesxcbcmac.c: fixed an 
	interoperability problem in AES-XCBC-MAC96.
	(encryption was always done with the same key)

	Submitted from: Yukiyo Akisada <akisada@64translator.com>
	
2005-07-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/pim6sd/{cfparse.y, cftoken.l, pim6sd.conf.5, 
	  routesock.c, routesock.h}: implemented a static MRIB
	  for RPF calculation.

Wed Jul 13 20:26:31 JST 2005	keiichi@iijlab.net
	* kame/kame/ndp/ndp.c
	fixed the proxy directive to work properly.

2005-07-04  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/netinet/ip_fw2.c
	  FreeBSD Security Advisory FreeBSD-SA-05:13.ipfw
	* freebsd5/sys/netinet/{tcp_input.c, tcp_var.h}:
	  FreeBSD Security Advisory FreeBSD-SA-05:15.tcp

<200506>
2005-06-22  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/netinet6/in6_pcb.c (init_sin6): corrected argument
	to sa6_recoverscope().  The previous code since June 17th's change
	could modify invalid memory space (while the possibility should be
	very rare) so upgrading is necessary.

2005-06-20  NISHIDA, Yoshifumi <nishida@csl.sony.co.jp>