@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2785 2005/07/22 08:52:53 jinmei Exp $
+$KAME: CHANGELOG,v 1.2786 2005/07/22 12:14:29 suz Exp $
 
 <200507>
+2005-07-22  SUZUKI, Shinsuke <suz@kame.net>
+	* freebsd5/sys/fs/devfs/devfs_vnops.c: 
+	  FreeBSD Security Advisory FreeBSD-SA-05:17.devfs
+
 2005-07-22  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* kame/kame/dhcp6: fixed memory leak for renew/rebind event data.
 	(KAME PR 872 reported by Meng Huan Hsieh)
